# Mobile-Robot

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/rovo_bringup/share/rovo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rovo_bringup/share/rovo_bringup/cmake/: rovo_bringupConfig-version.cmake  rovo_bringupConfig.cmake
install/rovo_bringup/share/rovo_bringup/config/: controllers.yaml  nav2_params.yaml
install/rovo_bringup/share/rovo_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/rovo_bringup/share/rovo_bringup/launch/: nav_rovo.launch.py  real_rovo.launch.py  view_rovo.launch.py
install/rovo_bringup/share/rovo_bringup/maps/: rovo_lab.pgm
install/rovo_can_driver/include/rovo_can_driver/: rovo_can_system.hpp
install/rovo_can_driver/share/rovo_can_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin_description.xml
install/rovo_can_driver/share/rovo_can_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rovo_can_driverExport-noconfig.cmake  rovo_can_driverConfig-version.cmake  rovo_can_driverConfig.cmake
install/rovo_can_driver/share/rovo_can_driver/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/rovo_sensors/share/rovo_sensors/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rovo_sensors/share/rovo_sensors/cmake/: rovo_sensorsConfig.cmake
install/rovo_sensors/share/rovo_sensors/config/: nano_scan.yaml
install/rovo_ur_description/share/rovo_ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rovo_ur_description/share/rovo_ur_description/cmake/: rovo_ur_descriptionConfig-version.cmake  rovo_ur_descriptionConfig.cmake
install/rovo_ur_description/share/rovo_ur_description/config/: controllers.yaml
log/: latest_build  latest_list
src/rovo_bringup/: CMakeLists.txt
src/rovo_bringup/config/: controllers.yaml  nav2_params.yaml  slam_toolbox.yaml
src/rovo_bringup/launch/: digital_twin_rovo.launch.py  mapping_rovo.launch.py  real_rovo.launch.py  view_rovo.launch.py
src/rovo_bringup/maps/: rovo_lab.yaml
src/rovo_can_driver/: CMakeLists.txt  package.xml  plugin_description.xml
src/rovo_can_driver/include/rovo_can_driver/: rovo_can_system.hpp
src/rovo_can_driver/src/: rovo_can_system.cpp
src/rovo_sensors/: CMakeLists.txt
src/rovo_sensors/config/: micro_scan.yaml
src/rovo_sensors/launch/: lidars.launch.py
src/rovo_sensors/scripts/: scan_fixer.py
src/rovo_ur_description/: CMakeLists.txt
src/rovo_ur_description/config/: controllers.yaml
src/rovo_ur_description/rviz/: rovo_ur.rviz
src/rovo_ur_description/urdf/: kiros.xacro  rovo_ur.xacro
(+15 files in other folders)
