<?xml version="1.0"?>
<package format="3">
  <name>rovo_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for rovo_2w</description>
  <maintainer email="you@example.com">Kevin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
